edited help, scrollbar issue

--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,9 @@ body {
     border: 1px solid #000;
 }
 
+#term-hard {
+  overflow-y: hidden;
+}
 
 /* TERMINAL Overwrites */
 .terminal, .cmd {
